# cli

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.sh  course.json  install.sh  rustfmt.toml  tests.json
cli/: Cargo.toml
cli/src/: db.rs  main.rs  monitor.rs  str_res.rs
cli/src/lister/: mod.rs  v1.rs  v2.rs
cli/src/parsing/: mod.rs  v1.rs  v2.rs
cli/src/parsing/v1/: mod.rs  redis.rs
cli/src/runner/: mod.rs  v1.rs  v2.rs
cli/src/validation/: mod.rs  v2.rs
cli/src/validator/: mod.rs  v1.rs  v2.rs
src/: constants.rs  db.rs  main.rs  models.rs  monitor.rs  str_res.rs
src/lister/: v1.rs
src/parsing/: mod.rs
src/parsing/v1/: mod.rs  redis.rs
src/runner/: mod.rs  v1.rs
src/validator/: mod.rs  v1.rs
tests/: mod.rs
