[package]
name = "dotcodeschool-cli"
version = "0.1.0"
edition = "2021"
description = "A simple test runner for DotCodeShool courses"

[profile.dev]
incremental = true
panic = "abort"

[profile.release]
panic = "unwind"

[profile.production]
codegen-units = 1    # Setting this to 1 allows for more optimizations at the cost of slower compile time
inherits = "release"
lto = "fat"          # Enables Link Time Optimization, enabling more aggressive optimizations across the entire codebase
opt-level = 3        # Optimize for speed regardless of binary size or compile time
rpath = false        # Disables adding rpath to the binary
strip = "symbols"    # Removes debug info and symbold from final binary

[dependencies]
# utilities
itertools = "0.13.0"
lazy_static = "1.5.0"
indexmap = "2.3.0"

# logging
log = "0.4.22"
simplelog = "0.12.2"
colored = "2.1.0"
tungstenite = "0.24.0"

# parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.122"
clap = { version = "4.5.13", features = ["derive", "cargo"] }

# error handling
thiserror = "1.0.63"

# CLI
indicatif = "0.17.8"

# database
sled = "0.34.7"
parity-scale-codec = { version = "3.6.12", features = ["derive"] }
blake2 = "0.10.6"
hex = "0.4.3"
rand = "0.8.5"

reqwest = { version = "0.12.7", features = ["json", "blocking"] }
git2 = "0.19.0"
strum = "0.26.3"
strum_macros = "0.26.4"
bson = "2.13.0"
serde_yaml = "0.9.34"
openssl = { version = "0.10", features = ["vendored"] }
